--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,9 @@
     .only-mobile {
         display: inline;
     }
+    .flex-item {
+        width: 100%
+    }
 }
 
 
@@ -43,6 +46,10 @@
     .only-mobile {
         display: inline;
     }
+
+    .flex-item {
+        width: 50%
+    }
     
 }
 
@@ -54,6 +61,9 @@
     .h3, h3 {
       font-size: 1.25rem;
     }
+    .flex-item {
+        width: 50%
+    }
 }
 
 
@@ -64,4 +74,16 @@
     .h3, h3 {
       font-size: 1.5rem;
     }
+    .flex-item {
+        width: 33%
+    }
 }
+
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
